# elfeed2

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  TODO.md  windows-xp.md
.github/workflows/: release.yml
assets/: sample-config  welcome.html
cmake/: EmbedFile.cmake  EmbedFileScript.cmake  FetchContentBundled.cmake  FetchCppHttplib.cmake  FetchMbedTLS.cmake  FetchPugixml.cmake  FetchSQLite.cmake  FetchTLS.cmake  FetchWxWidgets.cmake  Toolchain-Mingw64.cmake
contrib/vim/: README.md
contrib/vim/ftdetect/: elfeed2.vim
contrib/vim/ftplugin/: elfeed2.vim
contrib/vim/syntax/: elfeed2.vim
src/: Info.plist.in  activity_panel.cpp  activity_panel.hpp  app.cpp  app.hpp  config.cpp  data_uri_handler.cpp  data_uri_handler.hpp  db.cpp  download.cpp  downloads_frame.cpp  downloads_frame.hpp  downloads_panel.cpp  downloads_panel.hpp  elfeed.cpp  elfeed.hpp  elfeed2.icns  elfeed2.manifest  elfeed2.rc  elfeed2.rc.in  elfeed_import.cpp  elfeed_import.hpp  entry_detail.cpp  entry_detail.hpp  entry_list.cpp  entry_list.hpp  events.hpp  feed.cpp  feeds_panel.cpp  feeds_panel.hpp  fetch.cpp  filter.cpp  html.cpp  http.hpp  http_cpphttplib.cpp  http_posix.cpp  http_win.cpp  image_cache.cpp  image_cache.hpp  instance_lock.cpp  (+14 more)
src/icon/: build_icons.py
tests/: fake-ytdlp.py  fakefeeds.py
